# low-latency-matching

./: .gitignore  AGENTS.md  README.md
.pi/extensions/: git-autocommit.ts
matching-engine/: CMakeLists.txt  README.md  scenarios.txt
matching-engine/bench/: bench_main.cpp
matching-engine/docs/: benchmarks.md  latency_report.csv  profiling_report.txt
matching-engine/include/lob/: order.hpp  order_book.hpp  reference_order_book.hpp  spsc_ring_buffer.hpp  types.hpp
matching-engine/src/: main.cpp  order_book.cpp  reference_order_book.cpp
matching-engine/tests/: CMakeLists.txt  test_order_book.cpp  test_spsc_ring_buffer.cpp
scripts/: build_and_test.sh  run_benchmark.sh  strip_comments.py  visualize_book.py
